--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -21,9 +21,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install and Build 🔧 
-    - run: |
-        npm ci
+        
+    - name: Install and Build 🔧
+      run: |
+        npm install
         npm run build
 
     - name: Deploy 🚀
